Add GET component to API
